<resources>
    <string name="ads_navigation_drawer_open">Open navigation drawer</string>
    <string name="ads_navigation_drawer_close">Close navigation drawer</string>
    <string name="ads_format_version">Version %1$s</string>
    <string name="ads_search_empty">No matches found for \"%1$s\".</string>
    <string name="ads_app">App</string>
    <string name="ads_game">Game</string>
    <string name="ads_version">Version</string>
    <string name="ads_actions">Actions</string>
    <string name="ads_text">Text</string>
    <string name="ads_icon">Icon</string>
    <string name="ads_size">Size</string>
    <string name="ads_value">Value</string>
    <string name="ads_notification">Notification</string>
    <string name="ads_notification_tile">Tile</string>
    <string name="ads_widgets">Widgets</string>
    <string name="ads_instructions">Instructions</string>
    <string name="ads_tutorial">Tutorial</string>
    <string name="ads_product_tour">Product tour</string>
    <string name="ads_troubleshoot">Troubleshoot</string>
    <string name="ads_about">About</string>
    <string name="ads_overview">Overview</string>
    <string name="ads_general">General</string>
    <string name="ads_advanced">Advanced</string>
    <string name="ads_fixes">Fixes</string>
    <string name="ads_warning">Warning</string>
    <string name="ads_error">An error has occurred.</string>
    <string name="ads_i_got_it">Got it</string>
    <string name="ads_not_now">Not now</string>
    <string name="ads_later">Later</string>
    <string name="ads_yes_in">Yes, I\'m in</string>
    <string name="ads_accept">Accept</string>
    <string name="ads_more">More</string>
    <string name="ads_more_info">More info</string>
    <string name="ads_select">Select</string>
    <string name="ads_copy">Copy</string>
    <string name="ads_save">Save</string>
    <string name="ads_load">Load</string>
    <string name="ads_clear">Clear</string>
    <string name="ads_file">File</string>
    <string name="ads_create">Create</string>
    <string name="ads_configure">Configure</string>
    <string name="ads_open">Open</string>
    <string name="ads_previous">Previous</string>
    <string name="ads_next">Next</string>
    <string name="ads_skip">Skip</string>
    <string name="ads_loading">Loading&#8230;</string>
    <string name="ads_play">Play</string>
    <string name="ads_pause">Pause</string>
    <string name="ads_resume">Resume</string>
    <string name="ads_exit">Exit</string>
    <string name="ads_finish">Finish</string>
    <string name="ads_recents">Recents</string>
    <string name="ads_wallpaper">Wallpaper</string>
    <string name="ads_custom">Custom</string>
    <string name="ads_edit">Edit</string>
    <string name="ads_refresh">Refresh</string>
    <string name="ads_reset">Reset</string>
    <string name="ads_default">Default</string>
    <string name="ads_normal">Normal</string>
    <string name="ads_minimum">Minimum</string>
    <string name="ads_experimental">Experimental</string>
    <string name="ads_sort">Sort</string>
    <string name="ads_sort_category">Category</string>
    <string name="ads_sort_name">Name</string>
    <string name="ads_search">Search</string>
    <string name="ads_enable">Enable</string>
    <string name="ads_enabled">Enabled</string>
    <string name="ads_disable">Disable</string>
    <string name="ads_disabled">Disabled</string>
    <string name="ads_toggle">Toggle</string>
    <string name="ads_shortcut">Shortcut</string>
    <string name="ads_shortcuts">Shortcuts</string>
    <string name="ads_shortcut_created">Shortcut created</string>
    <string name="ads_shortcuts_desc">Pick a shortcut to add it on the home screen.</string>
    <string name="ads_nav_category_features">Menu</string>
    <string name="ads_nav_category_support">Support development</string>
    <string name="ads_nav_category_contribute">Contribute</string>
    <string name="ads_nav_home">Home</string>
    <string name="ads_nav_settings">Settings</string>
    <string name="ads_nav_help">Help</string>
    <string name="ads_nav_support">Support</string>
    <string name="ads_nav_about">About</string>
    <string name="ads_nav_buy">Buy</string>
    <string name="ads_nav_rate">Rate</string>
    <string name="ads_nav_share">Share</string>
    <string name="ads_nav_uninstall">Uninstall</string>
    <string name="ads_menu_info">Info</string>
    <string name="ads_menu_app_info">App info</string>
    <string name="ads_permissions">Permissions</string>
    <string name="ads_permissions_subtitle">Please allow the required permissions.</string>
    <string name="ads_permissions_subtitle_single">Please allow the required permission.</string>
    <string name="ads_perm_info_required">Permission required</string>
    <string name="ads_perm_info_grant_all">Please allow all the permissions to make the app working properly.</string>
    <string name="ads_perm_info_accept">This feature is optional, please accept to continue.</string>
    <string name="ads_perm_request">Request</string>
    <string name="ads_perm_request_desc">This permission is not granted. Tap to request.</string>
    <string name="ads_perm_granted">Granted</string>
    <string name="ads_perm_granted_desc">This permission has been granted.</string>
    <string name="ads_perm_denied">Denied</string>
    <string name="ads_perm_denied_desc">To grant this permission, go to App info &gt; Permissions. Tap to go to the App info.</string>
    <string name="ads_perm_reinstall">Reinstall</string>
    <string name="ads_perm_reinstall_desc">To grant this permission, please reinstall the app. Tap to go to the App info.</string>
    <string name="ads_perm_unknown">Unknown</string>
    <string name="ads_perm_unknown_desc">This permission is not present in the system.</string>
    <string name="ads_perm_default">Permission</string>
    <string name="ads_perm_default_desc">This permission is required to perform some actions.</string>
    <string name="ads_perm_default_explain">Explanation.</string>
    <string name="ads_perm_write_system_settings">Write system settings</string>
    <string name="ads_perm_write_system_settings_desc">Allow write system settings.</string>
    <string name="ads_perm_overlay">Draw over other apps</string>
    <string name="ads_perm_overlay_desc">Permit drawing over other apps.</string>
    <string name="ads_perm_usage_access">Usage access</string>
    <string name="ads_perm_usage_access_desc">Permit usage access.</string>
    <string name="ads_perm_accessibility">Accessibility</string>
    <string name="ads_perm_accessibility_desc">It must be managed via system settings.</string>
    <string name="ads_data">Data</string>
    <string name="ads_data_invalid">Invalid data</string>
    <string name="ads_data_invalid_desc">Please try again with the appropriate data.</string>
    <string name="ads_data_operations">Data operations</string>
    <string name="ads_backup_and_restore">Backup &amp; Restore</string>
    <string name="ads_backup">Backup</string>
    <string name="ads_backup_desc">Widget settings will not be backed up, please configure them manually after performing the restore operation.</string>
    <string name="ads_backup_title">Create backup</string>
    <string name="ads_backup_select">Select</string>
    <string name="ads_backup_summary">Save or share the current app settings.</string>
    <string name="ads_backup_new">New</string>
    <string name="ads_backup_create_new_info">Please create a new backup.</string>
    <string name="ads_backup_import_info">Please try to import backup from the device storage.</string>
    <string name="ads_backup_name">Backup name</string>
    <string name="ads_backup_location">Backup location</string>
    <string name="ads_backup_rename">Rename backup</string>
    <string name="ads_backup_complete">Backup has been created successfully</string>
    <string name="ads_backup_error">Unable to create backup</string>
    <string name="ads_backup_exists">Backup already exists</string>
    <string name="ads_backup_replace">Replace if already exists</string>
    <string name="ads_backup_invalid">Invalid backup</string>
    <string name="ads_backup_restore">Restore</string>
    <string name="ads_backup_restore_title">Restore backup</string>
    <string name="ads_backup_error_save">Unable to save backup</string>
    <string name="ads_backup_error_rename">Unable to rename backup</string>
    <string name="ads_backup_restore_summary">Load or manage the previously saved backups.</string>
    <string name="ads_backup_restore_desc">Select a backup to restore.</string>
    <string name="ads_backup_restore_backup">Restore backup</string>
    <string name="ads_backup_restore_backup_desc">This will delete all the current settings (except for widgets) and restore them from the selected backup. Do you want to continue?</string>
    <string name="ads_backup_restore_backup_verify_error">Unable to verify this backup. Please select some other backup.</string>
    <string name="ads_backup_modify">Modify</string>
    <string name="ads_backup_modify_desc">Select a backup to modify.</string>
    <string name="ads_backup_restore_done">Backup has been restored successfully</string>
    <string name="ads_backup_restore_error">Unable to restore backup.</string>
    <string name="ads_backup_not_found">No backups found.</string>
    <string name="ads_backup_modify_complete">Backup has been modified successfully</string>
    <string name="ads_backup_delete_all">Delete all</string>
    <string name="ads_backup_delete_all_title">Delete all backups</string>
    <string name="ads_backup_delete_all_desc">This will delete all the backups saved in the app storage. Do you want to continue?</string>
    <string name="ads_backup_delete_all_done">All backups have been deleted successfully.</string>
    <string name="ads_backup_import">Import</string>
    <string name="ads_theme">Theme</string>
    <string name="ads_theme_code">Code</string>
    <string name="ads_theme_code_capture">Capture</string>
    <string name="ads_theme_color_background">Background color</string>
    <string name="ads_theme_color_background_summary">Background color of the theme.</string>
    <string name="ads_theme_color_primary">Primary color</string>
    <string name="ads_theme_color_primary_summary">Color used by the primary elements.</string>
    <string name="ads_theme_color_primary_dark">System color</string>
    <string name="ads_theme_color_primary_summary_dark">Color used by the system elements.</string>
    <string name="ads_theme_color_accent">Accent color</string>
    <string name="ads_theme_color_secondary">Secondary color</string>
    <string name="ads_theme_color_accent_summary">Color used by the secondary elements.</string>
    <string name="ads_theme_color_tint">Tint color</string>
    <string name="ads_theme_color_inverse">Inverse color</string>
    <string name="ads_theme_corner_size">Corner size</string>
    <string name="ads_theme_corner_size_summary">Corner radius for the supported elements.</string>
    <string name="ads_theme_background_aware">Background aware</string>
    <string name="ads_theme_background_aware_desc">Adjust colors according to the background to provide the best visibility.</string>
    <string name="ads_theme_app">App theme</string>
    <string name="ads_theme_app_summary">Style of the app.</string>
    <string name="ads_theme_app_day">Day theme</string>
    <string name="ads_theme_app_day_summary">Style of the app during the day.</string>
    <string name="ads_theme_app_night">Night theme</string>
    <string name="ads_theme_app_night_summary">Style of the app at night.</string>
    <string name="ads_theme_notification">Notification theme</string>
    <string name="ads_theme_notification_style_summary">Style of the notification.</string>
    <string name="ads_theme_color_default_desc">Select auto to use the default color palette.</string>
    <string name="ads_widget_preview">Preview</string>
</resources>