<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright 2018-2022 Pranav Pandey

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

	   http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ads_menu_preview_data"
        android:title="@string/ads_save"
        android:icon="@drawable/ads_ic_download"
        android:orderInCategory="1"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/ads_menu_preview_data_default"
                android:title="@string/ads_default"
                android:icon="@drawable/ads_ic_image"
                android:orderInCategory="0"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/ads_menu_preview_data_custom"
                android:title="@string/ads_custom"
                android:icon="@drawable/ads_ic_size_image"
                android:orderInCategory="1"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/ads_menu_preview_data_app"
                android:title="@string/ads_data"
                android:icon="@drawable/ads_ic_android"
                android:orderInCategory="2"
                android:visible="false"
                app:showAsAction="ifRoom" />

        </menu>

    </item>

    <item
        android:id="@+id/ads_menu_preview_info"
        android:title="@string/ads_data"
        android:icon="@drawable/ads_ic_text"
        android:orderInCategory="1"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/ads_menu_preview_info_copy"
                android:title="@string/ads_copy"
                android:icon="@drawable/ads_ic_copy"
                android:orderInCategory="1" />

            <item
                android:id="@+id/ads_menu_preview_info_share"
                android:title="@string/ads_nav_share"
                android:icon="@drawable/ads_ic_share"
                android:orderInCategory="2" />

        </menu>

    </item>

</menu>
