<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright 2018-2021 Pranav Pandey

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

	   http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->

<com.pranavpandey.android.dynamic.support.widget.DynamicNestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.DynamicApp.Scroller.Vertical"
    android:id="@+id/ads_dialog_theme_select_root">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ads_margin_extra_tiny"
        android:paddingLeft="@dimen/ads_margin_regular"
        android:paddingStart="@dimen/ads_margin_regular"
        android:paddingRight="@dimen/ads_margin_regular"
        android:paddingEnd="@dimen/ads_margin_regular"
        android:orientation="vertical">

        <com.pranavpandey.android.dynamic.support.widget.DynamicTextView
            style="@style/TextAppearance.DynamicApp.Headline5.Card"
            android:id="@+id/ads_dialog_theme_select_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ads_margin_small"
            android:paddingLeft="@dimen/ads_margin_regular"
            android:paddingStart="@dimen/ads_margin_regular"
            android:paddingRight="@dimen/ads_margin_regular"
            android:paddingEnd="@dimen/ads_margin_regular"
            app:ads_colorType="primary" />

        <com.pranavpandey.android.dynamic.support.view.DynamicItemView
            android:id="@+id/ads_dialog_theme_select_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ads_icon="@drawable/ads_ic_style"
            app:ads_title="@string/ads_theme_app"
            app:ads_subtitle="@string/ads_theme_app_summary"
            app:ads_colorType="accent" />

        <com.pranavpandey.android.dynamic.support.view.DynamicItemView
            android:id="@+id/ads_dialog_theme_select_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ads_icon="@drawable/ads_ic_day"
            app:ads_title="@string/ads_theme_app_day"
            app:ads_subtitle="@string/ads_theme_app_day_summary"
            app:ads_colorType="accent" />

        <com.pranavpandey.android.dynamic.support.view.DynamicItemView
            android:id="@+id/ads_dialog_theme_select_night"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ads_icon="@drawable/ads_ic_night"
            app:ads_title="@string/ads_theme_app_night"
            app:ads_subtitle="@string/ads_theme_app_night_summary"
            app:ads_colorType="accent" />

        <com.pranavpandey.android.dynamic.support.view.DynamicItemView
            android:id="@+id/ads_dialog_theme_select_remote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ads_icon="@drawable/ads_ic_notification"
            app:ads_title="@string/ads_theme_notification"
            app:ads_subtitle="@string/ads_theme_notification_style_summary"
            app:ads_colorType="accent" />

    </LinearLayout>

</com.pranavpandey.android.dynamic.support.widget.DynamicNestedScrollView>
